# agent-puter

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.yml  pyproject.toml
examples/: 01_autonomous_agency.py  07_autonomous_agency.py
frontend/: Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/consult/: page.tsx
frontend/app/demo/[id]/: page.tsx
frontend/app/pay/[id]/deposit/: page.tsx
frontend/app/pay/[id]/final/: page.tsx
frontend/app/proposal/[id]/: page.tsx
frontend/app/status/[id]/: page.tsx
frontend/lib/: api.ts
src/agent_puter/: __init__.py  agent-logic-example.py
src/agent_puter/swarm/: __init__.py  agency.py  base_agent.py  ceo_agent.py  engineer_agent.py  main.py  models.py  pm_agent.py  qa_agent.py  researcher_agent.py  sales_agent.py  server.py
src/agent_puter/swarm/api/: __init__.py  _store.py  consultation.py  payments.py  projects.py
